# esp32-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
esp32-app/: Cargo.toml
esp32-app/src/: main.rs  wlan_dhcp.rs
no-idf/: Cargo.toml  diagram.json
no-idf/src/: blinky.rs  main.rs
