[package]
name = "noidf"
version = "0.1.0"
authors = ["Philipp Polterauer <philipp.polterauer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "main"


[dependencies]
esp32-hal = "0.18.0"
esp-backtrace = { version = "0.11.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.3.0", features = ["esp32", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.27.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }


[features]
default = ["esp32-hal/xtal-40mhz"]

[[bin]]
name = "main"
path = "src/main.rs"
